remove styling directly in html, update value correctly so that charLimit is updated, break words that are too long in job detail page

--- a/src/main/webapp/app/job/job-detail/job-detail.component.scss
+++ b/src/main/webapp/app/job/job-detail/job-detail.component.scss
@@ -131,6 +131,10 @@
   margin-bottom: 1rem;
 }
 
+.description-text {
+  overflow-wrap: anywhere; // Allow words that are too long to break and wrap onto the next line
+}
+
 .contact-info {
   background: var(--p-background-surface);
   border-radius: 0.9rem;
