--- a/src/main/webapp/app/shared/components/atoms/editor/editor.component.scss
+++ b/src/main/webapp/app/shared/components/atoms/editor/editor.component.scss
@@ -21,6 +21,7 @@
     flex-direction: column;
   }
 }
-.p-editor {
-  height: 20rem;
+.custom-quill-editor {
+  height: 12.5rem;
+  width: 100%;
 }
